// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Notifications) NotificationContent renders to correct snapshot when message has icon prop set to true 1`] = `
.c3 {
  text-align: center;
}

.c3[type=button] {
  line-height: normal;
  font-weight: normal;
}

.c3 .md-icon-text {
  font-weight: normal;
}

.c3 .md-icon {
  color: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 8px;
  background-color: rgb(49,49,49);
  width: 344px;
  min-height: 48px;
  border-radius: 3px;
  padding: 6px 16px;
  pointer-events: initial;
  box-shadow: 0 3px 5px -1px rgba(0,0,0,0.2),0 6px 10px 0 rgba(0,0,0,0.14),0 1px 18px 0 rgba(0,0,0,0.12);
}

.c1 {
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1 0 264px;
  -ms-flex: 1 0 264px;
  flex: 1 0 264px;
}

.c1 svg,
.c1 i {
  color: white !important;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: white;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2 button svg,
.c2 button i {
  color: white !important;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    morty
  </div>
  <div
    class="c2"
  >
    <button
      class="md-btn md-btn--icon md-pointer--hover md-inline-block c3"
      id="close-1"
      theme="[object Object]"
      type="button"
    >
      <div
        class="md-ink-container"
      />
      <i
        class="md-icon material-icons md-text--inherit"
      >
        close
      </i>
    </button>
  </div>
</div>
`;

exports[`(Notifications) NotificationContent renders to correct snapshot when message status is error 1`] = `
.c3 {
  text-align: center;
}

.c3[type=button] {
  line-height: normal;
  font-weight: normal;
}

.c3 .md-icon-text {
  font-weight: normal;
}

.c3 .md-icon {
  color: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 8px;
  background-color: #d32f2f;
  width: 344px;
  min-height: 48px;
  border-radius: 3px;
  padding: 6px 16px;
  pointer-events: initial;
  box-shadow: 0 3px 5px -1px rgba(0,0,0,0.2),0 6px 10px 0 rgba(0,0,0,0.14),0 1px 18px 0 rgba(0,0,0,0.12);
}

.c1 {
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1 0 264px;
  -ms-flex: 1 0 264px;
  flex: 1 0 264px;
}

.c1 svg,
.c1 i {
  color: white !important;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: white;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2 button svg,
.c2 button i {
  color: white !important;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    morty
  </div>
  <div
    class="c2"
  >
    <button
      class="md-btn md-btn--icon md-pointer--hover md-inline-block c3"
      id="close-1"
      theme="[object Object]"
      type="button"
    >
      <div
        class="md-ink-container"
      />
      <i
        class="md-icon material-icons md-text--inherit"
      >
        close
      </i>
    </button>
  </div>
</div>
`;

exports[`(Notifications) NotificationContent renders to correct snapshot when message status is info 1`] = `
.c3 {
  text-align: center;
}

.c3[type=button] {
  line-height: normal;
  font-weight: normal;
}

.c3 .md-icon-text {
  font-weight: normal;
}

.c3 .md-icon {
  color: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 8px;
  background-color: #1976d2;
  width: 344px;
  min-height: 48px;
  border-radius: 3px;
  padding: 6px 16px;
  pointer-events: initial;
  box-shadow: 0 3px 5px -1px rgba(0,0,0,0.2),0 6px 10px 0 rgba(0,0,0,0.14),0 1px 18px 0 rgba(0,0,0,0.12);
}

.c1 {
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1 0 264px;
  -ms-flex: 1 0 264px;
  flex: 1 0 264px;
}

.c1 svg,
.c1 i {
  color: white !important;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: white;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2 button svg,
.c2 button i {
  color: white !important;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    morty
  </div>
  <div
    class="c2"
  >
    <button
      class="md-btn md-btn--icon md-pointer--hover md-inline-block c3"
      id="close-1"
      theme="[object Object]"
      type="button"
    >
      <div
        class="md-ink-container"
      />
      <i
        class="md-icon material-icons md-text--inherit"
      >
        close
      </i>
    </button>
  </div>
</div>
`;

exports[`(Notifications) NotificationContent renders to correct snapshot when message status is success 1`] = `
.c3 {
  text-align: center;
}

.c3[type=button] {
  line-height: normal;
  font-weight: normal;
}

.c3 .md-icon-text {
  font-weight: normal;
}

.c3 .md-icon {
  color: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 8px;
  background-color: #388e3c;
  width: 344px;
  min-height: 48px;
  border-radius: 3px;
  padding: 6px 16px;
  pointer-events: initial;
  box-shadow: 0 3px 5px -1px rgba(0,0,0,0.2),0 6px 10px 0 rgba(0,0,0,0.14),0 1px 18px 0 rgba(0,0,0,0.12);
}

.c1 {
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1 0 264px;
  -ms-flex: 1 0 264px;
  flex: 1 0 264px;
}

.c1 svg,
.c1 i {
  color: white !important;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: white;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2 button svg,
.c2 button i {
  color: white !important;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    morty
  </div>
  <div
    class="c2"
  >
    <button
      class="md-btn md-btn--icon md-pointer--hover md-inline-block c3"
      id="close-1"
      theme="[object Object]"
      type="button"
    >
      <div
        class="md-ink-container"
      />
      <i
        class="md-icon material-icons md-text--inherit"
      >
        close
      </i>
    </button>
  </div>
</div>
`;

exports[`(Notifications) NotificationContent renders to correct snapshot when message status is warning 1`] = `
.c3 {
  text-align: center;
}

.c3[type=button] {
  line-height: normal;
  font-weight: normal;
}

.c3 .md-icon-text {
  font-weight: normal;
}

.c3 .md-icon {
  color: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 8px;
  background-color: #ffa000;
  width: 344px;
  min-height: 48px;
  border-radius: 3px;
  padding: 6px 16px;
  pointer-events: initial;
  box-shadow: 0 3px 5px -1px rgba(0,0,0,0.2),0 6px 10px 0 rgba(0,0,0,0.14),0 1px 18px 0 rgba(0,0,0,0.12);
}

.c1 {
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1 0 264px;
  -ms-flex: 1 0 264px;
  flex: 1 0 264px;
}

.c1 svg,
.c1 i {
  color: white !important;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: white;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2 button svg,
.c2 button i {
  color: white !important;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    morty
  </div>
  <div
    class="c2"
  >
    <button
      class="md-btn md-btn--icon md-pointer--hover md-inline-block c3"
      id="close-1"
      theme="[object Object]"
      type="button"
    >
      <div
        class="md-ink-container"
      />
      <i
        class="md-icon material-icons md-text--inherit"
      >
        close
      </i>
    </button>
  </div>
</div>
`;

exports[`(Notifications) NotificationContent renders to correct snapshot with default message payload 1`] = `
.c3 {
  text-align: center;
}

.c3[type=button] {
  line-height: normal;
  font-weight: normal;
}

.c3 .md-icon-text {
  font-weight: normal;
}

.c3 .md-icon {
  color: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 8px;
  background-color: rgb(49,49,49);
  width: 344px;
  min-height: 48px;
  border-radius: 3px;
  padding: 6px 16px;
  pointer-events: initial;
  box-shadow: 0 3px 5px -1px rgba(0,0,0,0.2),0 6px 10px 0 rgba(0,0,0,0.14),0 1px 18px 0 rgba(0,0,0,0.12);
}

.c1 {
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1 0 264px;
  -ms-flex: 1 0 264px;
  flex: 1 0 264px;
}

.c1 svg,
.c1 i {
  color: white !important;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: white;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2 button svg,
.c2 button i {
  color: white !important;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    morty
  </div>
  <div
    class="c2"
  >
    <button
      class="md-btn md-btn--icon md-pointer--hover md-inline-block c3"
      id="close-1"
      theme="[object Object]"
      type="button"
    >
      <div
        class="md-ink-container"
      />
      <i
        class="md-icon material-icons md-text--inherit"
      >
        close
      </i>
    </button>
  </div>
</div>
`;
